--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script defer src="script.js" charset="UTF-8"></script>
-    <title>Document</title>
+    <title>Analog Clock</title>
 </head>
 <body>
     <div class="clock">
